  * Added a new module, lsl.misc.rfutil, to help with understanding commercial antenna properties
  * Moved the calculateSEFD() function out of lsl.sim.vis and into lsl.misc.rfutil
  * Changed the meaning of the 'ForceGaussian' keyword in lsl.sim.vis.buildSimArray to contain the Gaussian full widths at half maximum in degrees

1.0.2
  * Added documentation for LDP to the Sphinx build system
  * Added a call to close() for the data dictionary used in lsl.sim.vis.buildSimArray
  * Fixed a version number regression in lsl.correlator.fx
  * Added a call to close() for the data dictionary used in lsl.skymap.SkyMapGSM

1.0.1
  * Added an option to updateLSLSSMIF.py to update the LWA1 SSMIF using a local file
  * Fixed a build problem on OS X with Python 2.7
  * Added support for using PyFFTW in the lsl.misc.dedispersion module
  * Added support for using PyFFTW in the lsl.correlator.filterbank module
  * Fixed a sign problem in the rewritten lsl.skymap.ProjectedSky class that caused the sky to invert in azimuth
  * Added support for FFTW wisdom
  * Switched the various C extensions over to used the floating point version of FFTW
  * Changed the name of the lsl.stations.LWAStation method for finding the distance and direction to another point on surface of the Earth from 'getPointingAndDirection' to 'getPointingAndDistance'
  * Updated the lsl.misc.gaussparams function to imporve the 2-D fits
  * Removed the requirement for a BANDPASS table in the lsl.imaging.utils.CorrelatedDataIDI class
  * Reworked the lsl.reader.ldp module to provide a more object oriented way to access data files
  * Fixed a packing bug in the lsl.sim.drx.frame2frame function
  * Fixed a bug in lsl.imaging.utils.CorrelatedDataUV that cause getDataSet to always return all data
  * Fixed the baseline ordering in FITS IDI files that use the stand number mapper
  * Updated the FITS IDI reader to use the UVFITS  scheme for determining baseline sets