@@ -10,11 +10,11 @@ K/Jy and then using those to get a system equivalent flux density.
 
 import math
 
-from lsl.common.constants import c as speedOfLight
+from lsl.common.constants import c as speedOfLight, kB
 
 __version__ = '0.1'
 __revision__ = '$Rev$'
-__all__ = ['dBd2dBi', 'dBi2gain', 'dBd2gain', 'calculateSEFD', 'jy2dBm', '__version__', '__revision__', '__all__']
+__all__ = ['dBd2dBi', 'dBd2dBi', 'dBi2gain', 'dBd2gain', 'gain2dBi', 'gain2dBd', 'calculateSEFD', 'calculateEffectiveArea', 'Jy2dBm', 'dBm2Jy', '__version__', '__revision__', '__all__']
 
 
 def dBd2dBi(dBd):
@@ -24,7 +24,17 @@ def dBd2dBi(dBd):
 	antenna).
 	"""
 	
-	return dBd + 2.15
+	return dBd + 2.14844
+
+
+def dBi2dBd(dBi):
+	"""
+	Convert and antenna gain dBi (gain relative to an isotropic antenna)
+	into a gain in dBd (gain relative to the maximum gain of a half-wave 
+	dipole).
+	"""
+	
+	return dBi - 2.14844
 
 
 def dBi2gain(dBi, frequency):
@@ -33,7 +43,10 @@ def dBi2gain(dBi, frequency):
 	at a particular frequency in Hz into a gain in K/Jy.
 	"""
 	
-	return 2.56 / (frequency/1e6)**2 * 10**(dBi/10.0)
+	# 10^(dBi/10) is the ratio of the effective area of the antenna relative 
+	# to an isotropic antenna where the area of the isotropic antenna is 
+	# given by:  wavelength^2 / 4 / pi
+	return speedOfLight**2 / (8.0*math.pi*kB*frequency**2) * 10**(dBi/10.0)
 
 
 def dBd2gain(dBd, frequency):
@@ -44,6 +57,29 @@ def dBd2gain(dBd, frequency):
 	
 	dBi = dBd2dBi(dBd)
 	return dBi2gain(dBi, frequency)
+
+
+def gain2dBi(gain, frequency):
+	"""
+	Convert an antenna gain in K/Jy at a particular frequency in Hz into a
+	gain in dBi (gain relative to an isotropic antenna).
+	"""
+	
+	# Calculate the area ratio
+	areaRatio = 8.0*math.pi*kB*frequency**2 / c**2 * gain
+	
+	# Convert to dBi
+	return 10.0*math.log10(areaRatio)
+
+
+def gain2dBd(gain, frequency):
+	"""
+	Convert an antenna gain in K/Jy at a particular frequency in Hz into a
+	gain in dBd (gain relative to the maximum gain of a half-wave dipole).
+	"""
+	
+	dBi = gain2dBi(gain, frequency)
+	return dBi2dBd(dBi)
 
 
 def calculateSEFD(Tsys, gain=None, area=None, efficiency=None):
@@ -58,9 +94,6 @@ def calculateSEFD(Tsys, gain=None, area=None, efficiency=None):
 	Of the optional parameters either 'gain' needs to be supplied or
 	both 'area' and 'efficiency'.
 	"""
-	
-	# Boltzmann's constant
-	kB = 1380.0	# Jy m^2 / K
 	
 	# Have we been supplied a gain or do we need to calculate it?
 	if gain is None:
@@ -77,21 +110,50 @@ def calculateSEFD(Tsys, gain=None, area=None, efficiency=None):
 	return SEFD
 
 
-def jy2dBm(flux, frequency, bandwidth):
+def calculateEffectiveArea(gain):
+	"""
+	Given the gain of an antenna in K/Jy, calculate the effective collecting
+	area in square meters.
+	"""
+	
+	# Calculate the area
+	area = 2.0*kB*gain
+	
+	return area
+
+
+def Jy2dBm(flux, bandwidth, gain):
 	"""
 	Convert a flux density in Jy into a received signal strength in dBm 
 	under the assumptions of:
-	  * center frequency in Hz
 	  * signal bandwidth in Hz
-	  * received using a isotropic antenna with area wavelength^2 / (4 pi)
+	  * antenna gain in K/Jy
 	"""
 	
 	# Antenna parameters
-	wavelength = speedOfLight / frequency	# m
-	areaIsotropic = wavelength**2 / 4 / math.pi	# m^2
+	area = calculateEffectiveArea(gain)
 	
 	# Power in mW
-	P = 10**-26 * bandwidth * areaIsotropic * 1000.0
+	P = 10**-26 * bandwidth * area * 1000.0
 	
 	# To dBm
 	return 10.0*math.log10(P)
+
+
+def dBm2Jy(dBm, bandwidth, gain):
+	"""
+	Convert a received signal strength in dBm into a flux density in Jy under
+	the assumptions of:
+	  * signal bandwidth in Hz
+	  * antenna gain in K/Jy
+	"""
+	
+	# Antenna parameters
+	area = calculateEffectiveArea(gain)
+	
+	# Power in mW
+	P = 10**(dBm/10.0) / 1000.0
+	
+	# To Jy
+	return P / (10**-26 * bandwidth * area)
+	
